--- a/config.sample.json
+++ b/config.sample.json
@@ -13,8 +13,30 @@
     "topic": "ledmatrix/cactuspi"
   },
   "plugins": {
-    "weather": true,
-    "bustime": true,
-    "alphavantage": true
+    "weather": {
+      "enabled": true,
+      "apiKey": "",
+      "city": "",
+      "unit": ""
+    },
+    "bustime": {
+      "enabled": true,
+      "apiKey": "",
+      "default": "",
+      "options": {
+        "busstop": {
+          "directionRef": 0,
+          "maximumStopVisits": 3,
+          "monitoringRef": 12345,
+          "lineRef": ""
+        }
+      }
+    },
+    "alphavantage": {
+      "enabled": true,
+      "apikey": "",
+      "functionName": "",
+      "symbol": ""
+    }
   }
 }
