--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
   },
   "homepage": "https://github.com/dannielum/cactuspi-server#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "mqtt": "^4.2.8",
-    "mta-bustime": "^1.0.0",
-    "pubnub": "^4.27.6",
-    "request": "^2.88.2"
+    "cactuspi-service": "^0.1.1",
+    "express": "^4.17.1"
   }
 }
