--- a/config.sample.json
+++ b/config.sample.json
@@ -1,7 +1,11 @@
 {
   "address": "localhost",
   "port": 8081,
-  "pubsubType": "pubnub",
+  "pubsubType": "sqs",
+  "sqs": {
+    "region": "region",
+    "topic": "https://sqs.region.amazonaws.com/account/topic"
+  },
   "pubnub": {
     "subscribeKey": "",
     "publishKey": "",
